--- a/app/mod_aws/templates/display-Wind-Barb.html
+++ b/app/mod_aws/templates/display-Wind-Barb.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} KMD ADT {% endblock %}
+{% block title %} GMet ADT {% endblock %}
 {% block head %}
 {{ super() }}
 <script type="text/javascript" src="{{ url_for('static', filename='lib/highcharts-8.1.2/highcharts.js') }}"></script>
