--- a/app/mod_aws/templates/display-Wind-Contours.html
+++ b/app/mod_aws/templates/display-Wind-Contours.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %} KMD ADT {% endblock %}
+{% block title %} GMet ADT {% endblock %}
 {% block head %}
 {{ super() }}
 <style>
@@ -40,7 +40,7 @@
                             <div>
                                 <label class="control-label">Select Time Step</label>
                                 <select name="tstep" id="timestepDispTS" class="form-control">
-                                    <option value="minute">15 Minutes Data</option>
+                                    <option value="minute">Minutes Data</option>
                                     <option value="hourly" selected>Hourly Data</option>
                                 </select>
                             </div>
