update GMet ADT

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -25,8 +25,8 @@
 }
 
 .imgADTWelcome {
-    width: 600px;
-    height: 500px;
+    width: 800px;
+    height: 600px;
 }
 
 .daty-now {
@@ -40,7 +40,7 @@
         <h1>Welcome to GMet AWS Data Tools (ADT)</h1>
     </div>
     <div class="image-hadt">
-        <img class="imgADTWelcome" src="{{ url_for('static', filename='images/Homer.png') }}" />
+        <img class="imgADTWelcome" src="{{ url_for('static', filename='images/kmd_aws_photo.png') }}" />
     </div>
 </div>
 <div>
