update AWS status

--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -11,7 +11,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('aws.dispAWSCoords_page') }}"> AWS Map and Metadata </a></li>
                         <li class="divider"></li>
-                        <li><a href=""> AWS Data Status </a></li>
+                        <li><a href="{{ url_for('aws.dispAWSStatus_page') }}"> AWS Data Status </a></li>
                         <li class="divider"></li>
                         <li><a href="{{ url_for('aws.dispAWSMinData_page') }}">AWS Minutes Data</a></li>
                         <li class="divider"></li>
